--- a/file.htm
+++ b/file.htm
@@ -1,16 +1,38 @@
-<HTML>	
-<HEAD>
-<TITLE> Корсунь-Шевченківський</TITLE> 
-</HEAD>
-<BODY>
-<body style="background-color:LightCyan;">
-<p  style="color:#0000FF"><i><h1><BIG><center><p style="color:Blue"> Корсунь-Шевченківський</center></BIG></h1> </i></p>
-
-<body style="background-color:LightCyan"><center><i><H2>Місто в Україні, районний центр Корсунь-Шевченківського району Черкаської області </u></center></i></H2>
-
-  <p  align="justify"> <body style="background-color:LightCyan;"><font text="vendana"></center> Центр міської ради до якої входять також села Гарбузин і Саморідня. Розташоване на північному сході області обабіч річки Росі, за 76 км від Черкас. Має залізничну станцію Корсунь. Місто перетинає автотраса Київ — Дніпропетровськ. З Києва до Корсуня-Шевченківського ходять автобуси з автостанції “Видубичі”, а з Черкас — з центрального автовокзалу. Населення — 18,3 тисяч мешканців (2007). <u>Корсунь — одне з найдавніших міст України.</font></u><center><img src="800px-Панорамный_вид_на_имение_Лопухиных_2.jpg"></center></p>
-  
- Згідно з легендою назва походить від Кримського Корсуня (Херсонеса), вихідці з якого після хрещення були священниками Київської десятинної церкви і отримали від князя Володимира право збирати данину в поселенні над Россю, якому дали назву рідного міста.Назва міста походить від імені бога сонця Корос.В давнину тут були грецькі поселення.
-</BODY>
-</BODY>
-</HTML>
+<html>	
+<head>
+<title> Корсунь-Шевченківський</title> 
+<meta http-equiv="Content-Type" content="text/html; charset=windows-1251">
+<link rel="stylesheet" href="/style.css" type="text/css"> 
+</head>
+<body>
+<div id="container">
+   <div id="header">
+   <body style="background-color:LightCyan;">
+   <p  tyle="color:#0000FF"><i><h1><BIG><center><p style="color:Blue"> Корсунь-Шевченківський</center></BIG></h1> </i></p>
+   </div>
+       <div id="left">
+       <body style="background-color:LightCyan"><center><i><H2>Місто в Україні, районний центр Корсунь-Шевченківського району Черкаської області </u></center></i></H2>
+       <p  align="justify"> <body style="background-color:LightCyan;"><font text="vendana"></center> Центр міської ради до якої входять також села Гарбузин і Саморідня. Розташоване на північному сході області обабіч річки Росі, за 76 км від Черкас. Має залізничну станцію Корсунь. Місто перетинає автотраса Київ — Дніпропетровськ. З Києва до Корсуня-Шевченківського ходять автобуси з автостанції “Видубичі”, а з Черкас — з центрального автовокзалу. Населення — 18,3 тисяч мешканців (2007). <u> - <MARQUEE BGCOLOR="#DDA0DD" HEIGHT=”80”>Корсунь-одне з найдавніших міст України </MARQUEE></font></u><center><img src="800px-Панорамный_вид_на_имение_Лопухиных_2.jpg"></center></p>
+       </div>
+          <div id="content">
+           <font size=3 color=#000080 family="Times">
+          З 1778 р. Корсунь став власністю <EM> князя Станіслава Понятовського</EM> - племінника останнього польського короля.
+          Місто наново закладене 1784, має 25 мурованих будинків. Станіслав Понятовський заклав тут фабрики сукна, замші, селітри, плантації шовковиці, винниці, розводив расових коней. Заклав тут для молоді школу танців. У всьому йому допомогав Жан Анрі Мюнц. Збудував тут шпиталь на три покої. Започаткував "касу допомоги" для погорільців.
+          В 1782 архітектор Ян Генрик Мюнц почав будувати палац для Понятовського, за його вказівками, та парк на березі річки Рось, та під кінець захворів і палац закінчував польський архітектор Джон Ліндсей.
+          На одному з островів, який називали "Острів", стояв двохповерховий мурований палац, що мав 26 покоїв, 3 мурованих будинки, 2 стайні. Зала була висотою в два поверхи, 15 на 10 метрів. Стайні для коней мали по 50 метрів довжини. <BR>Другий острів називався "Деніс" на ньому був закладений парк з оранжереями та теплицями. Крім того, було ще 5 менших островів без назви. "Швейцарський будиночок" теж був із самого початку закладений швейцарцем Мюнцом.
+          В палаці містилася велика колекція археологічних знахідок, викопаних в околицях Корсуня, в тому числі золотих виробів. В околицях знаходили багато цінних золотих речей, які жиди переплавляли відразу на золото. Пізніше Лопухін став пропонувати їм за кожну знайдену річ більше, ніж коштував сам метал, таким чином він зібрав велику колекцію золотих та срібних речей, а також монет.
+          <BR>Всього в місті нараховувався 258 будинок, з них 23 шляхетських, 34 жидівських, 25 мурованих. В центрі міста - ринкова площа у формі квадрату, по трьох сторонах були муровані будинки, а з четвертої "замок" - будинок губернатора, оточений глибоким ровом.
+          З 1793 р., після ІІ поділу Польщі місто увійшло до складу Російської імперії. Воно входило до Богуславського повіту Київського намісництва (з 1797 р. — губернії). <BR><img src="300px-Korsuno-002.jpg"></font>
+       
+      
+</div>
+             <div id="clear">
+             </div>
+      <div id="footer">
+      Виктория Красюк
+      https://vk.com/lady___victoria
+      </div>
+</div>
+</body>
+</body>
+</html>
