--- a/content.html
+++ b/content.html
@@ -3,6 +3,8 @@
  <head>
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
   <title>Зміст сайта</title>
+  <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+<link rel="stylesheet" href="/style.css" type="text/css"> 
  </head>
  <body>
   <p><BGSOUND SRC = "адреса звукового файлу">.</p>
