--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <html>
     <head>
         <title>Корсун</title>
+        <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+<link rel="stylesheet" href="/style.css" type="text/css"> 
     </head>
     <frameset rows="170, *" >
         <frame src="top.html">
