--- a/menu.html
+++ b/menu.html
@@ -1,6 +1,8 @@
 <html>
     <head>
-        <title>Меню сайта</title>        
+        <title>Меню сайта</title> 
+        <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+<link rel="stylesheet" href="/style.css" type="text/css"> 
     </head>
     <body bgcolor="#FFCC66" text="#990000">
 	 <a href="golovna.html" target="content">Головна</a>  <BR> <a href="istoria.html" target="content">Історія</a> <BR> <a href="zapovidnyk.html" target="content">Заповідник</a>
