--- a/top.html
+++ b/top.html
@@ -1,6 +1,8 @@
 <html>
     <head>
         <title>Фреймы в html</title>
+        <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+<link rel="stylesheet" href="/style.css" type="text/css"> 
 <style>
    body {
     background: #6633cc url(white-leaf-vector.jpg); 
